--- a/client/dicegame.html
+++ b/client/dicegame.html
@@ -26,7 +26,10 @@
         {{> scoreboard}}
         {{> gamearea}}
     </div>
-    <footer>An experiment by Philipp Kreutzer &copy; 2012 | made with meteor </footer>
+    <footer>
+        An experiment by Philipp Kreutzer &copy; 2012 | made with
+        <a href="http://meteor.com">meteor</a> | <a href="https://github.com/redclov3r/reach23">the
+        source</a></footer>
 </body>
 
 <template name="lobby">
